fix: fix prismjs code block problem and adjust card width
- Prismjs code blocks weren't showing scroll when overflowing
- Card weren't stretching smoothly according to window

--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -2,6 +2,7 @@
     padding: 0 1rem;
     margin: 0 auto;
     min-height: 100vh;
+    max-width: 50rem;
 
     display: flex;
     flex-direction: column;
@@ -10,7 +11,7 @@
 
 .content {
     flex-grow: 1;
-    max-width: 50rem;
     transition: all 0.5s ease-in-out 0s;
+    width: 100%;
 }
 
