--- a/src/components/Post/post.module.scss
+++ b/src/components/Post/post.module.scss
@@ -3,6 +3,7 @@
 .link {
     text-decoration: none;
     transition: all 0.5s ease-in-out 0s;
+    max-width: 100%;
 }
 
 .card {
@@ -12,6 +13,7 @@
     margin: 1.2rem 0 1.2rem;
     padding: 0.5rem 0 0.5rem;
     border-radius: 0.5rem;
+    min-width: 90%;
     border-width: 0.5px;
     border-style: solid;
     border-color: var(--text);
@@ -71,9 +73,3 @@
     padding: 0.1rem 0.3rem;
 }
 
-@media (min-width:860px)
-{
-    .card {
-        min-width: 49rem;
-    }
-}
