--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,6 +32,7 @@ canvas {
 a {
     color: var(--primary);
     text-decoration: none;
+    outline: none;
 }
 
 .charts {
